--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "bcrypt": "^5.1.1",
     "boxicons": "^2.1.4",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
