--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.2",
     "sass": "^1.80.4",
     "scss": "^0.2.4",
     "uuid": "^11.0.2",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "raw-loader": "^4.0.2",
-    "react-app-rewired": "^2.2.1"
+    "react-app-rewired": "^2.2.1",
+    "source-map-loader": "^5.0.0"
   }
 }
