--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-toastify": "^11.0.2",
     "sass": "^1.80.4",
     "scss": "^0.2.4",
+    "sonner": "^1.7.1",
     "uuid": "^11.0.2",
     "web-vitals": "^2.1.4"
   },
